# RecordTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/demo/www/recordtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/include/: jni_log.h
app/src/main/cpp/src/: TDLameUtil.cpp
app/src/main/java/com/demo/www/recordtest/: EncodeHelper.java  IThRecorder.java  MainActivity.java  RecordHelper.java  SplitHelper.java  TDLameUtil.java
app/src/main/java/com/demo/www/recordtest/utils/: PcmData.java  Utils.java
app/src/main/java/mvvm/: RecordModel.java  RecordViewModel.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/demo/www/recordtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
